@@ -272,3 +272,23 @@ Quaternion& Quaternion::rotation(const Vector<3>& axis)
 
   return *this;
 }
+
+Quaternion& Quaternion::rotation(const Vector<3>& from, const Vector<3>& to)
+{
+  CoordType mag_prod = sqrt(from.sqrMag() * to.sqrMag());
+  CoordType ctheta_plus_1 = Dot(from, to) / mag_prod + 1;
+
+  // antiparallel vectors
+  if(ctheta_plus_1 < WFMATH_EPSILON) // same check as used in the RotMatrix function
+    throw ColinearVectors<3>(from, to);
+
+  // cosine of half the angle
+  m_w = sqrt(ctheta_plus_1 / 2);
+
+  // vector in direction of axis, magnitude of cross product is proportional to
+  // the sin of the angle, divide to make the magnitude the sin of half the angle,
+  // sin(x) = 2sin(x/2)cos(x/2), so sin(x/2) = sin(x)/(2cos(x/2))
+  m_vec = Cross(from, to) / (2 * mag_prod * m_w);
+
+  return *this;
+}
